--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -31,22 +31,24 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'index' %}">GeekShop {% now "d.m.Y" %}</a>
+        <a class="navbar-brand" href="{% url 'index'%}">GeekShop {{ today|date:"d.m.Y" }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{%  url 'products:products' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                    <a class="nav-link" href="{% url 'products:products' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
+
+                {% if not user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
+                {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="auth/profile.html">Александр Ж.
+                    <a class="nav-link" href="{% url 'users:profile' %}">{{ user.username }}
                         <i class="fas fa-user-circle"></i>
                     </a>
                 </li>
@@ -56,21 +58,26 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Выйти <i class="fas fa-sign-out-alt"></i></a>
+                    <a class="nav-link" href="{% url 'users:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
 
 <!-- Page Content -->
-{% block content %} {% endblock %}
+{% block content %}
 
-{% block footer %} {% endblock %}
+{% endblock %}
+
+{% block footer %}
+
+{% endblock %}
 
 <!-- Bootstrap core JavaScript -->
 <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- FontAwesome script -->
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
